scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/importDeferJsdoc.errors.txt
/foo.js(2,18): error TS1005: 'from' expected.
/foo.js(2,18): error TS1141: String literal expected.
/foo.js(6,12): error TS2503: Cannot find namespace 'ns'.


==== /types.ts (0 errors) ====
    export type X = 1;
    
==== /foo.js (3 errors) ====
    /**
     * @import defer * as ns from "./types"
                     ~
!!! error TS1005: 'from' expected.
                     ~~~~
!!! error TS1141: String literal expected.
     */
    
    /**
     * @type { ns.X }
               ~~
!!! error TS2503: Cannot find namespace 'ns'.
     */
    let a = 2;
    